Snapshot 0ad6398cf1

* #3025: Make bundlebuilder work even if SUGAR_PREFIX is not set. (marco)
* #2896: Remove sugar.date module. (tomeu)

Snapshot 0b3f687749

* #3088: Fix style of zoom buttons palettes. (marco)
* Refactor activity share/join in Activity.__init__() to be clearer and cover
    all cases (dcbw)
* #2971: Fix palette flash when the mouse pointer leave the palete and go
    over the Invoker (marco)

Snapshot feb462d08d

* Don't allow removing system-installed activities. (tomeu)
* #3063: Make the 'Keep' button in the activity toolbar create a copy of the
  activity in the journal. Add a copy() method for activities to use. (tomeu)
* #3045: Fix issues with the clipboard icons and palettes. (tomeu)
* Get invites back to work in the UI. (marco)
* Get the title on activity palette in the mesh to work. (marco)

Snapshot e65fef5c79

* Support mutable name/tags in sugar.presence (smcv)
* Support invitations in sugar.presence (smcv)
* Add badges to infrastructure access points in mesh view (dcbw)
* Add palette to Wireless device on Home view showing channel (dcbw)

Snapshot 23ad88db0c

* #1986: Add Reboo option in Home View (edsiper)
* Re-share an activity when it gets launched from the journal if it was
    shared before (dcbw)
* Update to new tubes API (cassidy)

Snapshot 246ec1e4aa

* Update arabic translation. (khaled)
* Restore Icon's ability to load absolute file paths. (tomeu)
* #722 Show "charging" badge on battery. (danw)
* #2010 Remember state when scrubbing. (marco)

Snapshot d38cacfe2c

* Add icons to the activity ring palette. (danw)

Snapshot e83b98a8f6

* #2912: Improvements to GlibURLDownloader API (dcbw)
* #2299: Really fix buddy properties coming through as arrays of bytes (dcbw)

Snapshot b24a28a77d

* #2012: Fix palette position on the left frame panel. (marco)
* #2297: Make activity name translatable. (danw)
* #2695: Recognize text files as such. (tomeu)
* #2669: Add a border to the inner of the frame. (marco)